crates/sui-graphql-macros/tests/compile/missing_field_attr.rs
use sui_graphql_macros::QueryResponse;

#[derive(QueryResponse)]
struct BadStruct {
    // Missing #[field(path = "...")] attribute
    address: String,
}

fn main() {}
